--- a/Open5GS/Deployment/amf/amf.yaml
+++ b/Open5GS/Deployment/amf/amf.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1 
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: open5gs-amf
@@ -6,7 +6,7 @@ metadata:
   labels:
     epc-mode: amf
     promotheus: open5gs-monitor
-    version:  2.6.4
+    version: 2.6.4
     app.kubernetes.io/version: 2.6.4-25-g93012c4
     app.kubernetes.io/part-of: open5gs
 spec:
@@ -21,16 +21,16 @@ spec:
       labels:
         epc-mode: amf
         app: open5gs-amf
-        version:  2.6.4
-    spec:   
+        version: 2.6.4
+    spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
 
-      containers:             
+      containers:
         - name: amf
-          image: maikovisky/open5gs:ubuntu-latest  
+          image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -57,7 +57,7 @@ spec:
             - name: tcpdump-persistent-storage
               mountPath: /var/tcpdump
 
-          command: ["open5gs-amfd",  "-c", "/open5gs/config-map/amf.yaml"]
+          command: ["open5gs-amfd", "-c", "/open5gs/config-map/amf.yaml"]
           #command: ["sleep", "1d"]
 
         # - name: ebpf-amf
@@ -72,21 +72,20 @@ spec:
         #       mountPath: "/dev/net/tun" # Needed for VPN
 
         # - name: metrics-amf
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/prometheus-node-exporter"]
         #   volumeMounts:
         #     - name: "dev-net-tun"
         #       mountPath: "/dev/net/tun" # Needed for VPN
 
         # - name: tcpdump-amf
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/amf-%F_%H%M.pcap"]
         #   volumeMounts:
         #     - name: "dev-net-tun"
         #       mountPath: "/dev/net/tun" # Needed for VPN
         #     - name: tcpdump-persistent-storage
         #       mountPath: /var/tcpdump
-
 
       volumes:
         - name: open5gs-amf-config
@@ -104,7 +103,7 @@ spec:
         # - name: tcpdump-persistent-storage
         #   persistentVolumeClaim:
         #     claimName: open5gs-tcpdump-pv-claim
-                        
+
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -118,8 +117,8 @@ spec:
     matchLabels:
       epc-mode: amf
   endpoints:
-  - interval: 5s
-    port: http-open5gs-amf-9090
+    - interval: 5s
+      port: http-open5gs-amf-9090
 ---
 apiVersion: v1
 kind: Service
@@ -135,13 +134,12 @@ spec:
   ports:
     - name: http2-open5gs-amf-80
       protocol: TCP
-      port: 80 
+      port: 80
       targetPort: 80
     - name: http-open5gs-amf-9090
       protocol: TCP
-      port: 9090 
+      port: 9090
     - name: sctp-open5gs-amf-38412
       protocol: SCTP
       targetPort: 38412
       port: 38412
- 
