--- a/Open5GS/Deployment/iperf/iperf.yaml
+++ b/Open5GS/Deployment/iperf/iperf.yaml
@@ -31,7 +31,7 @@ spec:
     #   port: 9100
     #   targetPort: 9100
 
----    
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -46,23 +46,34 @@ spec:
     matchLabels:
       epc-mode: iperf
   template:
-    metadata:   
+    metadata:
       labels:
         epc-mode: iperf
-    spec:  
+    spec:
       nodeSelector:
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
-      containers:       
+      containers:
         - name: tcpdump-iperf
-          image: maikovisky/open5gs:ubuntu-latest    
-          command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/iperf-%F_%H%M.pcap"]
+          image: maikovisky/open5gs:2.6.4
+          command:
+            [
+              "/bin/tcpdump",
+              "-i",
+              "eth0",
+              "-s",
+              "65535",
+              "-G",
+              "3600",
+              "-w",
+              "/var/tcpdump/iperf-%F_%H%M.pcap",
+            ]
           volumeMounts:
             - name: tcpdump-persistent-storage
               mountPath: /var/tcpdump
 
         - name: iperf3
-          image: maikovisky/iperf:latest  
+          image: maikovisky/iperf:latest
           ports:
             - containerPort: 5201
               name: o5g-iperf-5201
@@ -72,22 +83,22 @@ spec:
           securityContext:
             privileged: true
             capabilities:
-              add: ["NET_ADMIN", "SYS_MODULE"]  
+              add: ["NET_ADMIN", "SYS_MODULE"]
           command: ["/bin/iperf3", "-s", "-B", "0.0.0.0", "-V", "--forceflush"]
-     
+
         - name: iperf
-          image: maikovisky/iperf:latest  
+          image: maikovisky/iperf:latest
           ports:
             - containerPort: 5001
               name: o5g-iperf-5001
           securityContext:
             privileged: true
             capabilities:
-              add: ["NET_ADMIN", "SYS_MODULE"]  
+              add: ["NET_ADMIN", "SYS_MODULE"]
           command: ["/bin/iperf", "-s", "--histograms"]
-        
+
         # - name: metrics-iperf
-        #   image: maikovisky/iperf:latest  
+        #   image: maikovisky/iperf:latest
         #   command: ["/bin/prometheus-node-exporter", "--collector.disable-defaults","--collector.arp","--collector.netclass" ,"--collector.netdev" ,"--collector.netstat" ,"--collector.udp_queues","--collector.ipvs","--collector.cpu","--collector.cpufreq","--collector.meminfo"]
         #   ports:
         #     - containerPort: 9100
@@ -96,7 +107,6 @@ spec:
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-
 # ---
 # apiVersion: monitoring.coreos.com/v1
 # kind: ServiceMonitor
