--- a/Open5GS/Deployment/nrf/nrf.yaml
+++ b/Open5GS/Deployment/nrf/nrf.yaml
@@ -18,7 +18,7 @@ spec:
     # - name: http-open5gs-nrf-9100
     #   protocol: TCP
     #   port: 9100
----    
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -35,12 +35,12 @@ spec:
     matchLabels:
       epc-mode: nrf
   template:
-    metadata: 
+    metadata:
       labels:
         epc-mode: nrf
         version: 2.6.4
         app: open5gs-nrf
-    spec:  
+    spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
@@ -48,9 +48,20 @@ spec:
 
       containers:
         - name: tcpdump-nrf
-          image: maikovisky/open5gs:ubuntu-latest  
-          imagePullPolicy: Always  
-          command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/nrf-%F_%H%M.pcap"]
+          image: maikovisky/open5gs:2.6.4
+          imagePullPolicy: Always
+          command:
+            [
+              "/bin/tcpdump",
+              "-i",
+              "eth0",
+              "-s",
+              "65535",
+              "-G",
+              "3600",
+              "-w",
+              "/var/tcpdump/nrf-%F_%H%M.pcap",
+            ]
           volumeMounts:
             - name: "dev-net-tun"
               mountPath: "/dev/net/tun" # Needed for VPN
@@ -58,7 +69,7 @@ spec:
               mountPath: /var/tcpdump
 
         - name: nrf
-          image: maikovisky/open5gs:ubuntu-latest 
+          image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -76,15 +87,12 @@ spec:
 
           command: ["open5gs-nrfd", "-c", "/open5gs/config-map/nrf.yaml"]
 
-
         # - name: metrics-nrf
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/prometheus-node-exporter"]
         #   volumeMounts:
         #     - name: "dev-net-tun"
         #       mountPath: "/dev/net/tun" # Needed for VPN
-
-          
 
       volumes:
         - name: open5gs-nrf-config
@@ -128,6 +136,6 @@ spec:
     tls:
       mode: ISTIO_MUTUAL
   subsets:
-  - name: v1
-    labels:
-      version: 2.6.4
+    - name: v1
+      labels:
+        version: 2.6.4
