--- a/Open5GS/Deployment/pcf/pcf.yaml
+++ b/Open5GS/Deployment/pcf/pcf.yaml
@@ -16,7 +16,7 @@ spec:
     - name: http-open5gs-pcf-9090
       protocol: TCP
       port: 9090
----    
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -31,26 +31,26 @@ spec:
     matchLabels:
       epc-mode: pcf
   template:
-    metadata:  
+    metadata:
       labels:
         epc-mode: pcf
         app: open5gs-pcf
         prometheus: open5gs-monitor
-    spec:  
+    spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
       containers:
         # - name: tcpdump-pcf
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/pcf-%F_%H%M.pcap"]
         #   volumeMounts:
         #     - name: tcpdump-persistent-storage
         #       mountPath: /var/tcpdump
 
         - name: pcf
-          image: maikovisky/open5gs:ubuntu-latest   
+          image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           securityContext:
             privileged: true
@@ -65,7 +65,7 @@ spec:
           command: ["open5gs-pcfd", "-c", "/open5gs/config-map/pcf.yaml"]
 
         # - name: metrics-pcf
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/prometheus-node-exporter"]
       volumes:
         - name: open5gs-pcf-config
@@ -89,5 +89,5 @@ spec:
     matchLabels:
       epc-mode: pcf
   endpoints:
-  - interval: 5s
-    port: http-open5gs-pcf-9090
+    - interval: 5s
+      port: http-open5gs-pcf-9090
