--- a/Open5GS/Deployment/scp/scp.yaml
+++ b/Open5GS/Deployment/scp/scp.yaml
@@ -15,7 +15,7 @@ spec:
     #   protocol: TCP
     #   port: 9100
     #   targetPort: 9100
----    
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -30,27 +30,27 @@ spec:
     matchLabels:
       epc-mode: scp
   template:
-    metadata:   
+    metadata:
       labels:
         epc-mode: scp
         app: open5gs-scp
 
-    spec:  
+    spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
 
-      containers:  
+      containers:
         # - name: tcpdump-scp
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/scp-%F_%H%M.pcap"]
         #   volumeMounts:
         #     - name: tcpdump-persistent-storage
         #       mountPath: /var/tcpdump
 
         - name: scp
-          image: maikovisky/open5gs:ubuntu-latest    
+          image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           securityContext:
             privileged: true
@@ -69,13 +69,11 @@ spec:
               subPath: "scp.yaml"
 
             - name: "lib-modules"
-              mountPath: "/lib/modules" 
+              mountPath: "/lib/modules"
           command: ["open5gs-scpd", "-c", "/open5gs/config-map/scp.yaml"]
 
-
-
         # - name: metrics-scp
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/prometheus-node-exporter"]
       volumes:
         - name: open5gs-scp-config
