--- a/Open5GS/Deployment/udr/udr.yaml
+++ b/Open5GS/Deployment/udr/udr.yaml
@@ -17,7 +17,7 @@ spec:
     # - name: http-open5gs-udr-9100
     #   protocol: TCP
     #   port: 9100
----    
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -32,28 +32,28 @@ spec:
     matchLabels:
       epc-mode: udr
   template:
-    metadata:   
+    metadata:
       labels:
         epc-mode: udr
         app: open5gs-udr
         # version: v2.6.1-26
 
-    spec:  
+    spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
       containers:
         # - name: tcpdump-udr
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/udr-%F_%H%M.pcap"]
         #   volumeMounts:
         #     - name: tcpdump-persistent-storage
         #       mountPath: /var/tcpdump
 
         - name: udr
-          image: maikovisky/open5gs:ubuntu-latest 
-          imagePullPolicy: Always   
+          image: maikovisky/open5gs:2.6.4
+          imagePullPolicy: Always
           securityContext:
             privileged: true
             capabilities:
@@ -73,7 +73,7 @@ spec:
 
           command: ["open5gs-udrd", "-c", "/open5gs/config-map/udr.yaml"]
         # - name: metrics-udr
-        #   image: maikovisky/open5gs:ubuntu-latest    
+        #   image: maikovisky/open5gs:2.6.4
         #   command: ["/bin/prometheus-node-exporter"]
       volumes:
         - name: open5gs-udr-config
@@ -83,7 +83,6 @@ spec:
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-
 # ---
 # apiVersion: monitoring.coreos.com/v1
 # kind: ServiceMonitor
