--- a/Open5GS/Deployment/smf/smf-configmap.yaml
+++ b/Open5GS/Deployment/smf/smf-configmap.yaml
@@ -32,7 +32,7 @@ data:
         - dev: eth0
       subnet:
         - addr: 10.41.0.1/16
-          dnn: internet
+          dnn: default
         # - addr: 10.41.0.1/16
         #   dnn: slice01
       dns:
@@ -46,7 +46,7 @@ data:
           - sst: 1
             sd: 000001
             dnn:
-              - internet
+              - default
 
     nrf:
       sbi:
@@ -58,7 +58,7 @@ data:
         # - addr: open5gs-upf
         #   dnn: [internet]
         - addr: open5gs-upf-1
-          dnn: [internet]
+          dnn: [default]
 
     metrics:
         addr: 0.0.0.0
