--- a/Free5GC/Deployment/ausf/ausf.yaml
+++ b/Free5GC/Deployment/ausf/ausf.yaml
@@ -16,6 +16,7 @@ spec:
         epc-mode: ausf
         app: free5gc-ausf
     spec:
+      hostname: ausf-pod
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
