--- a/Free5GC/Deployment/smf/smf.yaml
+++ b/Free5GC/Deployment/smf/smf.yaml
@@ -16,6 +16,7 @@ spec:
         epc-mode: smf
         app: free5gc-smf
     spec:
+      hostname: smf-pod
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
@@ -71,7 +72,7 @@ data:
           dnnInfos: # DNN information list
             - dnn: internet # Data Network Name
               dns: # the IP address of DNS
-                ipv4: 8.8.8.8
+                ipv4: 10.96.0.10
                 ipv6: 2001:4860:4860::8888
         - sNssai: # S-NSSAI (Single Network Slice Selection Assistance Information)
             sst: 1 # Slice/Service Type (uinteger, range: 0~255)
@@ -79,7 +80,7 @@ data:
           dnnInfos: # DNN information list
             - dnn: internet # Data Network Name
               dns: # the IP address of DNS
-                ipv4: 8.8.8.8
+                ipv4: 10.96.0.10
                 ipv6: 2001:4860:4860::8888
       plmnList: # the list of PLMN IDs that this SMF belongs to (optional, remove this key when unnecessary)
         - mcc: 208 # Mobile Country Code (3 digits string, digit: 0~9)
@@ -87,9 +88,9 @@ data:
       locality: area1 # Name of the location where a set of AMF, SMF, PCF and UPFs are located
       pfcp: # the IP address of N4 interface on this SMF (PFCP)
         # addr config is deprecated in smf config v1.0.3, please use the following config
-        nodeID: smf.free5gc.svc.cluster.local # the Node ID of this SMF
-        listenAddr: 0.0.0.0
-        externalAddr: smf.free5gc.svc.cluster.local # the IP/FQDN of N4 interface on this SMF (PFCP)
+        nodeID: smf-pod # the Node ID of this SMF
+        listenAddr: smf-pod
+        externalAddr: smf-pod # the IP/FQDN of N4 interface on this SMF (PFCP)
       userplaneInformation: # list of userplane information
         upNodes: # information of userplane node (AN or UPF)
           gNB1: # the name of the node
@@ -105,9 +106,7 @@ data:
                 dnnUpfInfoList: # DNN information list for this S-NSSAI
                   - dnn: internet
                     pools:
-                      - cidr: 10.60.0.0/16
-                    staticPools:
-                      - cidr: 10.60.100.0/24
+                      - cidr: 60.60.0.0/16
               - sNssai: # S-NSSAI (Single Network Slice Selection Assistance Information)
                   sst: 1 # Slice/Service Type (uinteger, range: 0~255)
                   sd: 112233 # Slice Differentiator (3 bytes hex string, range: 000000~FFFFFF)
@@ -158,7 +157,7 @@ data:
     ueRoutingInfo: # the list of UE routing information
       UE1: # Group Name
         members:
-        - imsi-208930000007487 # Subscription Permanent Identifier of the UE
+        - imsi-2089300007487 # Subscription Permanent Identifier of the UE
         topology: # Network topology for this group (Uplink: A->B, Downlink: B->A)
         # default path derived from this topology
         # node name should be consistent with smfcfg.yaml
@@ -167,33 +166,26 @@ data:
           - A: BranchingUPF
             B: AnchorUPF1
         specificPath:
-          - dest: 10.60.0.103/32 
+          - dest: 60.60.0.103/32 # the destination IP address on Data Network (DN)
+            # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
+            # The UPF's name should be consistent with smfcfg.yaml
             path: [BranchingUPF, AnchorUPF2]
 
-      UE2: 
+      UE2: # Group Name
         members:
-        - imsi-208930000007486
-        topology:
+        - imsi-2089300007486 # Subscription Permanent Identifier of the UE
+        topology: # Network topology for this group (Uplink: A->B, Downlink: B->A)
+        # default path derived from this topology
+        # node name should be consistent with smfcfg.yaml
           - A: gNB1
             B: BranchingUPF
           - A: BranchingUPF
             B: AnchorUPF1
         specificPath:
-          - dest: 10.0.0.11/32 
+          - dest: 10.0.0.11/32 # the destination IP address on Data Network (DN)
             # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
             # The UPF's name should be consistent with smfcfg.yaml
             path: [BranchingUPF, AnchorUPF2]
-
-    routeProfile: # Maintains the mapping between RouteProfileID and ForwardingPolicyID of UPF
-      MEC1: # Route Profile identifier
-        forwardingPolicyID: 10 # Forwarding Policy ID of the route profile
-
-    pfdDataForApp: # PFDs for an Application
-      - applicationId: edge # Application identifier
-        pfds: # PFDs for the Application
-          - pfdID: pfd1 # PFD identifier
-            flowDescriptions: # Represents a 3-tuple with protocol, server ip and server port for UL/DL application traffic
-              - permit out ip from 10.60.0.1 8080 to any
 ---
 apiVersion: v1
 kind: Service
@@ -205,6 +197,10 @@ spec:
     epc-mode: smf
     app: free5gc-smf
   ports:
+    - name: free5gc-smf-udp-2152
+      protocol: UDP
+      port: 2152
+      targetPort: 2152
     - name: http-free5gc-smf-8000
       protocol: TCP
       port: 8000
