--- a/Free5GC/Deployment/amf/amf.yaml
+++ b/Free5GC/Deployment/amf/amf.yaml
@@ -16,6 +16,7 @@ spec:
         epc-mode: amf
         app: free5gc-amf
     spec:
+      hostname: amf-pod
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
@@ -48,7 +49,7 @@ data:
     configuration:
       amfName: AMF
       ngapIpList:
-        - 0.0.0.0
+        - amf-pod
       ngapPort: 38412
       sbi:
         scheme: http
@@ -124,6 +125,10 @@ data:
         expireTime: 6s
         maxRetryTimes: 4
       t3550:
+        enable: true
+        expireTime: 6s
+        maxRetryTimes: 4
+      t3555:
         enable: true
         expireTime: 6s
         maxRetryTimes: 4
