--- a/Free5GC/Deployment/tester/my5grantester.yaml
+++ b/Free5GC/Deployment/tester/my5grantester.yaml
@@ -28,7 +28,7 @@ metadata:
   labels:
     epc-mode: my5grantester
 spec:
-  replicas: 10
+  replicas: 1
   selector:
     matchLabels:
       epc-mode: my5grantester
@@ -39,7 +39,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: kiss
+        kubernetes.io/hostname: whitesnake
       containers:
         - name: my5grantester
           image:  carlosmenin/my5grantester:latest
@@ -57,8 +57,9 @@ spec:
           #command: ["./app load-test-parallel -n $NUM_UEs -d $SLEEP_CONN -t $START_DELAY -a"]
           #command: ["./app","load-test-division","-n","100","-d","10000","-t","30","-u","5","-i","20","-a"]
           #command: ["./app","load-test-parallel","-n","100","-d","100","-t","30","-a"]
-          command: ["./app","load-test-decrement","-n","100","-d","2000","-t","30","-u","190","-i","10","-a"]
+          #command: ["./app","load-test-decrement","-n","100","-d","2000","-t","30","-u","190","-i","10","-a"]
           #command: ["./app","ue"]
+          command: ["sleep","1d"]
       volumes:
         - name: free5gc-my5grantester-config
           configMap:
@@ -93,10 +94,10 @@ data:
   config.yml: |
     gnodeb:
       controlif:
-        ip: "0.0.0.0"
+        ip: "free5gc-my5grantester-0"
         port: 9487
       dataif:
-        ip: "0.0.0.0"
+        ip: "free5gc-my5grantester-0"
         port: 2152
       plmnlist:
         mcc: "208"
@@ -106,13 +107,14 @@ data:
       slicesupportlist:
         sst: "01"
         sd: "010203"
+      test: "test-normal-registration"
 
     ue:
-      msin: "0000000000"
+      msin: "0000000001"
       key: "8baf473f2f8fd09487cccbd7097c6862"
       opc: "8e27b6af0e692e750f32667a3b14605d"
       amf: "8000"
-      sqn: "16f3b3f70fc2"
+      sqn: "000000000023"
       dnn: "internet"
       hplmn:
         mcc: "208"
@@ -120,6 +122,15 @@ data:
       snssai:
         sst: 1
         sd: "010203"
+      integrity:
+        nia0: false
+        nia1: false
+        nia2: true
+      ciphering:
+        nea0: true
+        nea1: false
+        nea2: false
+      test: ""
 
     amfif:
       ip: "amf.free5gc.svc.cluster.local"
