--- a/OAI-5G/Deployment/smf.yaml
+++ b/OAI-5G/Deployment/smf.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1 
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: oai-smf
@@ -18,7 +18,7 @@ spec:
         nodetype: server
       containers:
         - name: oai-smf
-          image: oaisoftwarealliance/oai-smf:latest
+          image: oaisoftwarealliance/oai-smf:v1.5.1
           ports:
             - name: http1
               containerPort: 80
@@ -113,7 +113,7 @@ spec:
             - name: NSSAI_SST2
               value: "222"
             - name: NSSAI_SD2
-              value: "00007b"
+              value: "123"
             - name: SESSION_AMBR_UL2
               value: 50Mbps
             - name: SESSION_AMBR_DL2
@@ -126,7 +126,7 @@ spec:
             - name: DNN_RANGE3
               value: "14.1.1.2 - 14.1.1.253"
             - name: DEFAULT_CSCF_IPV4_ADDRESS
-              value: "127.0.0.1"  # only needed when ims is being used
+              value: "127.0.0.1" # only needed when ims is being used
             - name: ENABLE_USAGE_REPORTING
               value: "no" # Set yes if UE USAGE REPORTING is to be done at UPF
 ---
