--- a/OAI-5G/Deployment/udm.yaml
+++ b/OAI-5G/Deployment/udm.yaml
@@ -18,7 +18,7 @@ spec:
         nodetype: server
       containers:
         - name: oai-udm
-          image: oaisoftwarealliance/oai-udm:latest
+          image: oaisoftwarealliance/oai-udm:v1.5.1
           ports:
             - name: http1
               containerPort: 80
