--- a/Open5GS/Deployment/tester/my5grantester.yaml
+++ b/Open5GS/Deployment/tester/my5grantester.yaml
@@ -43,22 +43,57 @@ spec:
       containers:
         - name: my5grantester
           image: carlosmenin/my5grantester:latest
+          env:
+            - name: NGAP_LOCAL_ADDR
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: GTPU_LOCAL_ADDR
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: MCC
+              value: "999"
+            - name: MNC
+              value: "70"
+            - name: TAC
+              value: "000001"
+            - name: GNBID
+              value: "000003"
+            - name: SST_GNB
+              value: "01"
+            - name: SD
+              value: "000001"
+            - name: MSIN
+              value: "0000000000"
+            - name: KEY
+              value: 465B5CE8B199B49FAA5F0A2EE238A6BC
+            - name: OPC
+              value: E8ED289DEBA952E4283B54E88E6183CA
+            - name: AMF
+              value: "8000"
+            - name: SQN
+              value: "0000000"
+            - name: DNN
+              value: default
+            - name: SST_UE
+              value: "000001"
+            - name: TEST
+              value: parallel
+            - name: NUM_UE
+              value: "1"
+            - name: DELAY
+              value: "1000"
+            - name: TIME
+              value: "10"
+            - name: NGAP_REMOTE_ADDR
+              value: open5gs-amf
           securityContext:
-            privileged: true
             capabilities:
-              add: ["NET_ADMIN", "SYS_MODULE"]
-          volumeMounts:
-            - name: open5gs-my5grantester-config
-              mountPath: /my5G-RANTester/config/config.yml
-              subPath: "config.yml"
-          #command: ["./app load-test-parallel -n $NUM_UEs -d $SLEEP_CONN -t $START_DELAY -a"]
-          #command: ["./app","load-test-division","-n","100","-d","10000","-t","30","-u","5","-i","20","-a"]
-          #command: ["./app","load-test-parallel","-n","100","-d","100","-t","30","-a"]
-          command: ["sleep", "1d"]
-      volumes:
-        - name: open5gs-my5grantester-config
-          configMap:
-            name: open5gs-my5grantester-config
+              add:
+                - NET_ADMIN
+                - SYS_MODULE
+            privileged: true
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -75,57 +110,3 @@ spec:
     - interval: 30s
       port: open5gs-my5grantester-tcp-9100
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: open5gs-my5grantester-config
-  namespace: cemenin
-  labels:
-    epc-mode: my5grantester
-data:
-  config.yml: |
-    gnodeb:
-      controlif:
-        ip: "open5gs-my5grantester-0"
-        port: 9487
-      dataif:
-        ip: "open5gs-my5grantester-0"
-        port: 2152
-      plmnlist:
-        mcc: "999"
-        mnc: "70"
-        tac: "000001"
-        gnbid: "000003"
-      slicesupportlist:
-        sst: "01"
-        sd: "000001"
-      test: "test-normal-registration"
-
-    ue:
-      msin: "0000000000"
-      key: "465B5CE8B199B49FAA5F0A2EE238A6BC"
-      opc: "E8ED289DEBA952E4283B54E88E6183CA"
-      amf: "8000"
-      sqn: "0000000"
-      dnn: "default"
-      hplmn:
-        mcc: "999"
-        mnc: "70"
-      snssai:
-        sst: 1
-        sd: "000001"
-    integrity:
-      nia0: false
-      nia1: false
-      nia2: true
-    ciphering:
-      nea0: true
-      nea1: false
-      nea2: false
-    test: ""
-    amfif:
-      ip: "open5gs-amf"
-      port: 38412
-
-    logs:
-        level: 4
